# gnuradio-companion

./: .gitignore  README.md  pyproject.toml
src/gnuradio_companion/: compiler.py  main.py
src/gnuradio_companion/blocks/: draw.block.yml  grc.tree.yml
src/gnuradio_companion/converter/: block.py  block_tree.py  cheetah_converter.py  flow_graph.py  main.py
src/gnuradio_companion/core/: Config.py  Connection.py  Constants.py  FlowGraph.py  Messages.py  base.py  cache.py  platform.py
src/gnuradio_companion/core/blocks/: _build.py  block.py  dummy.py  embedded_python.py
src/gnuradio_companion/core/generator/: FlowGraphProxy.py  cpp_hier_block.py  cpp_top_block.py  hier_block.py  top_block.py
src/gnuradio_companion/core/io/: yaml.py
src/gnuradio_companion/core/params/: dtypes.py  param.py  template_arg.py
src/gnuradio_companion/core/ports/: __init__.py  _virtual_connections.py  port.py
src/gnuradio_companion/core/schema_checker/: block.py  domain.py  utils.py  validator.py
src/gnuradio_companion/core/utils/: __init__.py  epy_block_io.py  expr_utils.py  extract_docs.py  flow_graph_complexity.py
src/gnuradio_companion/gui/: Actions.py  Application.py  Bars.py  BlockTreeWindow.py  Config.py  Console.py  Constants.py  Dialogs.py  DrawingArea.py  Executor.py  FileDialogs.py  MainWindow.py  Notebook.py  ParamWidgets.py  ParserErrorsDialog.py  Platform.py  PropsDialog.py  StateCache.py  Utils.py  VariableEditor.py
src/gnuradio_companion/gui_qt/: Config.py  Constants.py  Platform.py  Utils.py  base.py  external_editor.py  grc.py  properties.py
(+27 files in other folders)
