[project]
name = "gnuradio-companion"
version = "0.1.0"
description = "GNU Radio Companion"
authors = []
dependencies = ["pyyaml>=6.0.2", "mako>=1.3.10", "numpy>=2.3.3", "jsonschema>=4.25.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL3"}

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true
